(#4) Layout: fix overflow-x

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -132,7 +132,11 @@ $breakpoint-desktop: 1024px;
     break-after: avoid;
 }
 
+html {
+    overflow-x: hidden;
+}
 body {
     margin: 0;
     overflow-x: hidden;
+    width: 100vw;
 }
